fix: Attempting to fix overflow-y of background overlay

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ body {
     flex-direction: column;
     width: 100%;
     position: relative;
-    height: 100%;
+    min-height: 100%;
 }
 
 main {
